@@ -57,13 +57,6 @@ int main(int argc, char *argv[]) {
 	// initialize our own FreeImage error handler
 	FreeImage_SetOutputMessage(FreeImageErrorHandler);
 
-	// test multipage creation
-	testBuildMPage("sample.png", "sample.ico", FIF_ICO);
-	testBuildMPage("sample.png", "sample.tif", FIF_TIFF);
-
-	// test memory IO
-	testMemIO("sample.png");
-
 	// test plugins capabilities
 	showPlugins();
 
@@ -75,6 +68,14 @@ int main(int argc, char *argv[]) {
 
 	// test loading / saving / converting image types using the TIFF plugin
 	testImageTypeTIFF(width, height);
+
+	// test multipage creation
+	testBuildMPage("sample.png", "sample.ico", FIF_ICO, 24);
+	testBuildMPage("sample.png", "sample.tif", FIF_TIFF, 24);
+	testBuildMPage("sample.png", "sample.gif", FIF_GIF, 8);
+
+	// test memory IO
+	testMemIO("sample.png");
 	
 #if defined(FREEIMAGE_LIB) || !defined(WIN32)
 	FreeImage_DeInitialise();
